@@ -1,4 +1,4 @@
-#	$OpenBSD: ssh_config,v 1.17 2003/05/15 14:55:25 djm Exp $
+#	$OpenBSD: ssh_config,v 1.18 2003/05/16 03:27:12 djm Exp $
 
 # This is the ssh client system-wide configuration file.  See
 # ssh_config(5) for more information.  This file provides defaults for
@@ -25,6 +25,7 @@
 #   HostbasedAuthentication no
 #   BatchMode no
 #   CheckHostIP yes
+#   AddressFamily any
 #   ConnectTimeout 0
 #   StrictHostKeyChecking ask
 #   IdentityFile ~/.ssh/identity
